# moveit_pro_mobile_manipulation

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  behavior_plugin.yaml  sync_subtrees.sh
config/: config.yaml  initial_positions.yaml
config/control/: picknik_fanuc.ros2_control.yaml
config/moveit/: servo.yaml
description/: fanuc_colours.xacro  fanuc_lrmate200id.ros2_control.xacro  lrmate200id_macro.xacro  picknik_fanuc.xacro  scene.xml
mobile_manipulation_config/objectives/: 00_solution_-_move_to_initial_pose.xml  01_solution_-_create_a_pose.xml  02_solution_-_visualize_a_pose.xml  03_solution_-_pose_2m_above_the_robot.xml  05_solution_-_define_a_path.xml  06_solution_-_visualize_a_path.xml  07_solution_-_plan_motion_for_a_path.xml  08_solution_-_execute_path_plan.xml  09_solution_-_an_infeasible_path.xml  10_solution_-_visualize_path_error.xml  12_solution_-_constrain_orientation.xml  13_solution_-_load_a_path_from_file.xml  15_solution_-_a_path_that_collides.xml  16_solution_-_checking_for_collisions.xml  17_solution_-_execute_the_feasible_path.xml  18_solution_-_define_a_coverage_path.xml  19_solution_-_execute_coverage_path.xml  20_solution_-_look_at_the_airfoil.xml  21_solution_-_find_the_airfoil.xml  22_solution_-_visualize_airfoil_frame.xml  23_solution_-_airfoil_coverage_origin.xml  24_solution_-_airfoil_coverage_path.xml  25_solution_-_execute_airfoil_coverage.xml  estimate_object_pose.xml  move_to_a_stampedpose.xml  take_snapshot.xml
objectives/: move_to_waypoint.xml  request_teleoperation.xml  take_snapshot.xml
picknik_ur_mobile_config/objectives/: take_snap.xml
src/: hello_world.cpp
src/example_behaviors/: CMakeLists.txt  example_behaviors_plugin_description.xml  package.xml
src/example_behaviors/include/example_behaviors/: convert_mtc_solution_to_joint_trajectory.hpp  ndt_registration.hpp  ransac_registration.hpp
src/example_behaviors/src/: convert_mtc_solution_to_joint_trajectory.cpp  delayed_message.cpp  fibonacci_action_client.cpp  ndt_registration.cpp  ransac_registration.cpp  register_behaviors.cpp
src/example_behaviors/test/: test_behavior_plugins.cpp
src/fanuc_sim/: CMakeLists.txt  package.xml
src/fanuc_sim/description/: fanuc_materials.xacro
src/fanuc_sim/objectives/: close_gripper.xml  interpolate_to_joint_state.xml  move_to_pose.xml  move_to_waypoint.xml  open_gripper.xml  request_teleoperation.xml  teleoperate.xml
src/lab_sim/: package.xml
src/lab_sim/config/: config.yaml
src/lab_sim/description/: picknik_ur.xacro
src/lab_sim/objectives/: 3_waypoint_pick_and_place.xml  add_waypoints_to_mtc_task.xml  apriltag_pick_object.xml  constrained_pick_place.xml  create_pose_vector.xml  cycle_between_waypoints.xml  get_april_tag_pose_from_image.xml  joint_diagnostic.xml  joint_trajectory.yaml  load_and_execute_joint_trajectory.xml  look_at_table.xml  move_with_velocity_and_force.xml  pick_and_place_example.xml  pick_object.xml  pick_up_cube.xml  (+10 more)
(+14 files in other folders)
